--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.12"
+python = ">=3.9,<3.13"
 aiohttp = "3.9.5"
 aiosignal = "1.3.1"
 anyio = "4.3.0"
@@ -29,7 +29,7 @@ flask = "3.0.3"
 idna = "3.7"
 importlib-metadata = "7.1.0"
 ipykernel = "6.29.3"
-ipython = "8.24.0"
+ipython = ">=7.0.0,<8.25.0"
 ipywidgets = "8.1.2"
 jedi = "0.19.1"
 jinja2 = "3.1.3"
@@ -41,6 +41,13 @@ jupyter_console = "6.6.3"
 jupyter_core = "5.7.2"
 jupyterlab = "4.1.8"
 kiwisolver = "1.4.5"
+langchain_experimental = "0.0.58"
+langchain = "0.1.19"
+langchain-community = "0.0.38"
+langchain-core = "0.1.52"
+langchain-openai = "0.1.4"
+langchainhub = "0.1.15"
+langgraph = "0.0.44"
 markupsafe = "2.1.5"
 matplotlib = "3.8.4"
 mistune = "3.0.2"
@@ -53,7 +60,10 @@ pandas = "1.5.3"
 pillow = "10.3.0"
 prometheus_client = "0.20.0"
 pygments = "2.17.2"
-pytest = "8.1.2"
+pytest = ">=8.2.1,<9.0.0"
+pytest-flask = "^1.3.0"
+pytest-mock = "^3.14.0"
+python-dotenv = "^0.21.0"
 pyyaml = "6.0.1"
 requests = "2.31.0"
 scikit-learn = "1.4.2"
@@ -69,20 +79,14 @@ traitlets = "5.14.3"
 urllib3 = "2.2.1"
 zipp = "3.17.0"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 astor = "0.8.1"
 curl-cffi = "0.6.3"
 duckdb = "0.10.2"
 duckduckgo-search = "5.3.0"
 faker = "19.13.0"
-langchain = "0.1.19"
-langchain-community = "0.0.38"
-langchain-core = "0.1.52"
-langchain-experimental = "0.0.58"
-langchain-openai = "0.1.4"
-langchainhub = "0.1.15"
-langgraph = "0.0.44"
-pandasai = "2.0.36"
 regex = "2024.4.16"
 tiktoken = "0.6.0"
 types-requests = "2.31.0.20240406"
+tox = { version = "^4.15.0", python = ">=3.8" }
+pytest-mock = "^3.14.0"
