--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ prompt/ames.txt
 prompt/user_description_of_file.txt
 
 # Tools cache
-tools/__pycache__/
+tools/__pycache__
 
 # Static data and system files
 static/.DS_Store
@@ -19,7 +19,7 @@ assets/.DS_Store
 # Source files
 src/main_more.py
 src/.DS_Store
-src/__pycache__/
+src/__pycache__
 src/.env
 src/*.egg-info
 
