--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,7 @@ tqdm = "4.66.2"
 traitlets = "5.14.3"
 urllib3 = "2.2.1"
 zipp = "3.17.0"
+flask-cors = "^4.0.1"
 
 [tool.poetry.group.dev.dependencies]
 astor = "0.8.1"
