--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,6 +81,7 @@ flask-cors = "^4.0.1"
 more-itertools = "^10.3.0"
 groq = "^0.9.0"
 langchain-groq = "^0.1.5"
+shell = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 astor = "0.8.1"
